# Edge-Optimized-Tracking-System

./: .gitignore  CITATION.cff  Dockerfile  README.md  build.sh  complie.sh  docker-compose.yml  run_and_exit.sh  run_container.sh
models/perception/: config.pbtxt
models/perception_ensembled/: config.pbtxt
models/perception_postprocessing/: config.pbtxt
models/perception_postprocessing/1/: model.py
models/perception_preprocessing/: config.pbtxt
models/perception_preprocessing/1/: model.py
scripts/: torch_to_onnx.py  train.py
scripts/prototype/: data_loader.py  learning_tracker.py
tracker_system/: CMakeLists.txt
tracker_system/bytetrack/: CMakeLists.txt
tracker_system/bytetrack/cmake/: byteTrackConfig.cmake.in
tracker_system/bytetrack/examples/: example_tracks.cpp
tracker_system/bytetrack/include/: BYTETracker.h
tracker_system/bytetrack/src/: BYTETracker.cpp
tracker_system/examples/: example_system.cpp
tracker_system/filter/: CMakeLists.txt
tracker_system/filter/cmake/: filterConfig.cmake.in
tracker_system/filter/examples/: filter_example.cu
tracker_system/filter/include/filter/: kernels.cuh  particle_filter.hpp  particle_states.cuh
tracker_system/filter/src/: kernels.cu  particle_filter.cpp  particle_states.cu
tracker_system/include/: detector_interface.hpp  filter_interface.hpp  tracker_interface.hpp  tracker_system.hpp
tracker_system/perception/: CMakeLists.txt
tracker_system/perception/cmake/: perceptionConfig.cmake.in
tracker_system/perception/examples/: perception_dataset.cpp
tracker_system/perception/include/perception/: engine.hpp
tracker_system/perception/src/: engine.cpp
tracker_system/src/: tracker_system.cpp
weights/: quantize_yolo.sh
